--- a/pom.xml
+++ b/pom.xml
@@ -12,13 +12,14 @@
 	<groupId>com.movies</groupId>
 	<artifactId>movies</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<packaging>war</packaging>
+	<packaging>jar</packaging>
 	<name>movies</name>
 	<description>movies project</description>
 
 	<properties>
 		<java.version>1.8</java.version>
 	</properties>
+	
 
 	<dependencies>
 		<dependency>
