--- a/pom.xml
+++ b/pom.xml
@@ -7,17 +7,20 @@
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>2.1.2.RELEASE</version>
+		<!-- <version>2.2.2.BUILD-SNAPSHOT</version> -->
 		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.movies</groupId>
 	<artifactId>movies</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
+	<!-- <packaging>war</packaging> -->
 	<name>movies</name>
 	<description>movies project</description>
 
 	<properties>
 		<java.version>1.8</java.version>
+		<!-- <java.version>11</java.version> -->
 	</properties>
 	
 
